# football-match-prediction

./: .gitignore  ARCHITECTURE.md  PROJECT_REFERENCE.md  README.md  app.py  claude.md  download_la_liga.py  fixtures_template.csv  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: match-predict-dev.md
.claude/rules/: 00-core.md  10-no-leakage.md  20-betting.md  30-conventions.md  40-python-style.md  50-comments.md
config/: decision_engine.yml
match_predict/: __init__.py  bet_analytics.py  betting.py  store.py
match_predict/calibration/: __init__.py  calibrate.py
match_predict/data/: __init__.py  ingest.py  schema.py  sync.py  validation.py
reports/: example_predictions.json  market_significance_test.md  model_scorecard.csv  model_scorecard.md  per_league_metrics.csv  per_season_metrics.csv  run_meta.json  scorecard.csv
scripts/: backtest_bet_modes.py  backtest_decisions.py  bet_report.py  build_market_profiles.py  decision_report.py  evaluate_prices.py  fetch_logos.py  make_report.py  predict_matches.py  predict_upcoming.py  refresh_data.sh  research_decisions.py  run_backtest.py  sync_data.py  train.py  write_reports.py
templates/: index.html
tests/: conftest.py  test_bet_analytics.py  test_bet_modes.py  test_betting.py  test_decision_odds.py  test_decision_serve.py  test_ingest.py  test_leakage.py  test_logo_fetch.py  test_market_profiles.py  test_metrics.py  test_models.py  test_per_group_scorecard.py  test_reconciliation.py  test_score_matrix.py  test_significance.py  test_sync.py  test_training.py  test_viz_store.py
(+48 files in other folders)
