[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "match_predict"
version = "0.1.0"
description = "Calibrated football match prediction & soccer betting model — Dixon-Coles, Poisson, Elo and a LightGBM ensemble with leakage-safe, walk-forward evaluation."
requires-python = ">=3.10"
keywords = [
    "football-prediction",
    "soccer-prediction",
    "match-prediction",
    "football-betting",
    "sports-betting",
    "dixon-coles",
    "poisson",
    "elo-rating",
    "expected-goals",
    "probability-calibration",
    "machine-learning",
    "lightgbm",
    "backtesting",
    "premier-league",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["match_predict*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
